# Geant4

./: .gitignore  GEANT4COPYRIGHT  README.md
ANSG/: README.md
ANSG/CZT/: combineoutputs.py  construction.cc  construction.hh  generator.cc  run.hh
ANSG/CdTe/: CMakeLists.txt  combineoutputs.py  construction.cc  construction.hh  sim.cc
ANSG/DTModeratorOptimization/: CMakeLists.txt  README.md  construction.cc  run.cc
ANSG/GeometryOptimizationHPGe/: CMakeLists.txt  action.hh  combineoutputs.py  construction.hh  generator.hh  physics.hh  run.mac  sim.cc
ANSG/HPGeNSL/: .gitignore  combineoutputs.py  construction.cc  construction.hh  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  iso.mac  run.cc  run.hh  run.mac  stepping.cc
ANSG/OSU/: CMakeLists.txt  combineoutputs.py  event.cc
ANSG/Post-OSU/: CMakeLists.txt  README.md  combineoutputs.py  construction.cc  construction.hh  event.cc  event.hh  flake.nix  generator.cc  iso.mac  run.cc  run.hh  stepping.cc
ANSG/Prelim/GeometryOptimizationHPGe/: CMakeLists.txt  README.md  action.cc  construction.cc  detector.cc  detector.hh  generator.cc  physics.cc  run.cc
ANSG/Prelim/SiLi/: CMakeLists.txt  README.md  construction.cc
ANSG/SiDiode/: CMakeLists.txt  README.md  construction.cc  generator.cc  generator.hh  physics.hh  run.mac  sim.cc
ANSG/SiLi/: event.cc  generator.cc  physics.cc
ANSG/ThermalDT/: action.hh  combineoutputs.py  generator.cc  generator.hh  iso.mac  physics.cc
LZ/: README.md  action.cc  combineoutputs.py  construction.hh  detector.hh  event.cc
LZ/24keVNeutrons/: CMakeLists.txt  construction.cc  construction.hh  event.cc  event.hh  flake.nix  generator.cc  generator.hh  iso.mac  newplot.py  physics.cc  physics.hh  run.cc  stepping.cc  stepping.hh  vis.mac  z98.a252_modify.txt
LZ/ModeratedNeutrons/: action.hh  distribution.py  generator.cc  run.cc  stepping.hh  vis.mac
MDvDM/: README.md
MDvDM/LiF/: Diagram.odg  (+3 more)
MUSIC/: README.md
PSI/: README.md
(+105 files in other folders)
